# pterodapter

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: cargo-build.yml
docs/: certs.md  macos-pf.md  systemd.md  windows-split-routing.md
examples/: certs.md
macos/: bindgen.sh  sign.sh
src/: bufferpool.rs  fortivpn.rs  futures.rs  http.rs  ikev2.rs  l2gateway.rs  logger.rs  main.rs  network.rs  pcap.rs  ppp.rs  proxy.rs  socks.rs  tproxy.rs  uplink.rs  utils.rs
src/fortivpn/: mod.rs  service.rs
src/ikev2/: crypto.rs  esp.rs  ip.rs  message.rs  mod.rs  pki.rs  session.rs
src/ikev2/ip/: dns.rs  icmp.rs  mod.rs
src/ip/: dns.rs  icmp.rs  mod.rs  tso.rs
src/l2gateway/: fallback.rs  mod.rs  rawsocket.rs
src/l2gateway/iface/: mod.rs  rawsocket.rs  vmnet.rs
src/l2gateway/iface/vmnet/: mod.rs  sys.rs
src/masquerade/: mod.rs
src/proxy/: mod.rs  network.rs
src/static/: token.html
