[package]
name = "pterodapter"
version = "0.2.1"
edition = "2021"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/pterodapter"
license = "Apache-2.0"
rust-version = "1.77"

[dependencies]
log = { version = "0.4", default-features = false }
tokio = { version = "1.40", default-features = false, features = ["rt", "io-util", "signal", "net", "fs", "time", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
rustls-platform-verifier = { version = "0.3", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

smoltcp = { version = "0.11", optional = true, default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv4-fragmentation", "proto-ipv6", "proto-ipv6-fragmentation", "socket-tcp"] }

aws-lc-rs = { version = "*", optional = true, default-features = false }
rustls-webpki = { version = "*", optional = true, default-features = false, features = ["alloc", "aws_lc_rs"] }
base64 = { version = "*", optional = true, default-features = false, features = ["std"] }
x509-cert = { version = "0.2", optional = true, default-features = false }

[features]
default = ["proxy", "ikev2"]
proxy = ["smoltcp"]
ikev2 = ["aws-lc-rs", "rustls-webpki", "base64", "x509-cert"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
