[package]
name = "pterodapter"
version = "0.6.0"
edition = "2024"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/pterodapter"
license = "Apache-2.0"
rust-version = "1.85"

[dependencies]
log = { version = "0.4", default-features = false }
tokio = { version = "1.44", default-features = false, features = ["rt", "io-util", "signal", "net", "time", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-platform-verifier = { version = "0.5", default-features = false }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng"] }
aws-lc-rs = { version = "*", default-features = false }
rustls-webpki = { version = "*", default-features = false, features = ["aws-lc-rs"] }
base64 = { version = "*", default-features = false, features = ["std"] }
x509-cert = { version = "0.2", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
