[package]
name = "pterodapter"
version = "0.7.0"
edition = "2024"
authors = ["Dmitrii Zolotukhin <contact@3d-net.nl>"]
repository = "https://github.com/zlogic/pterodapter"
license = "Apache-2.0"
rust-version = "1.89"

[dependencies]
log = { version = "0.4", default-features = false }
tokio = { version = "1.53", default-features = false, features = ["rt", "io-util", "signal", "net", "fs", "time", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-platform-verifier = { version = "0.7", default-features = false }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }
aws-lc-rs = { version = "*", default-features = false }
rustls-webpki = { version = "*", default-features = false, features = ["aws-lc-rs"] }
base64 = { version = "*", default-features = false, features = ["std"] }
x509-cert = { version = "0.3", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "*", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6", default-features = false, features = ["alloc"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
